Ensures consistent alignment of page titles.

--- a/style.scss
+++ b/style.scss
@@ -150,6 +150,9 @@ img{
 	text-align: left;
 }
 
+.pagetitle{
+	text-align: center;
+}
 
 /* Navigation bar */
 .webnav
